tests/baselines/reference/templateStringWithEmbeddedYieldKeyword.errors.txt
error TS2318: Cannot find global type 'IterableIterator'.
templateStringWithEmbeddedYieldKeyword.ts(1,15): error TS1005: '(' expected.


!!! error TS2318: Cannot find global type 'IterableIterator'.
==== templateStringWithEmbeddedYieldKeyword.ts (1 errors) ====
    function* gen {
                  ~
!!! error TS1005: '(' expected.
        // Once this is supported, yield *must* be parenthesized.
        var x = `abc${ yield 10 }def`;
    }
    